--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
-    <string name="app_name">Android Lesson 2 (Qualifiers)</string>
+    <!--Название приложения-->
+        <string name="app_name">Android Lesson 2 (Qualifiers)</string>
+
+    <!--Строки-->
+        <!--Заголовок активити с ориентациями-->
+        <string name="orientation_activity_title">Ориентация экрана</string>
+        <!--Кнопки-->
+            <string name="button_1">Кнопка 1</string>
+            <string name="button_2">Кнопка 2</string>
+            <string name="button_3">Кнопка 3</string>
+            <string name="button_4">Кнопка 4</string>
+        <!--/Кнопки-->
+    <!--/Строки-->
 </resources>
